crates/toml_edit/tests/fixtures/invalid/float/trailing-us.stderr
TOML parse error at line 1, column 19
  |
1 | trailing-us = 1.2_
  |                   ^
Invalid floating-point number
Expected digit, digit
